fix header overflow

--- a/css/header.css
+++ b/css/header.css
@@ -4,7 +4,7 @@ header {
   padding: 10px;
   user-select: none;
   display: grid;
-  grid-template-columns: 1fr 120px 1fr;
+  grid-template-columns: 1fr 150px 1fr;
   height: 23px;
 }
 
